Tue May 29 12:40:08 2001  Brian Gough  <bjg@network-theory.co.uk>

	* configure.in: added missing wildcard to end of hpux11* to match
 	different versions of hpux11, e.g. hpux11.2.

Tue May 22 10:38:59 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.m4: try to make C-code compatible with C++, also changed
 	return() to exit() as mentioned in the autoconf documentation.

2001-05-21  Mark Galassi  <rosalia@galassi.org>

	* config.guess, config.sub: removed these auto-generated files
	from CVS since they are built for developers by autogen.sh.

Tue May 15 10:59:43 2001  Brian Gough  <bjg@network-theory.co.uk>

	* autogen.sh: upgraded to latest libtool and automake

Tue May  1 12:19:01 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_nan.h (GSL_NAN): added definitions for Microsoft Visual C++

Mon Apr 30 13:46:39 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h: split out gsl_pow_int.h and gsl_nan.h

Wed Mar 21 14:16:29 2001  Brian Gough  <bjg@network-theory.co.uk>

	* gsl-config.in (Usage): allow user to specify an external blas
 	library through an environment variable

2000-12-14  Mark Galassi  <rosalia@galassi.org>

	* gsl.spec, configure.in: upped the version to 0.7+ since the
	release has been made.

2000-10-26  Mark Galassi  <rosalia@galassi.org>

	* ltconfig, ltmain.sh: removed these auto-generated files.

2000-10-26  Mark Galassi  <rosalia@lanl.gov>

	* stamp-h.in: removed this file because it is auto-generated.

	* scripts/mkknownproblems.sh: fixed it so it's slightly better,
	but it still assumes that you run it out of $(srcdir)/scripts.

	* scripts/knownproblems.pl: put in a more standard path for perl.

	* AUTHORS: some changes and additions.

	* KNOWN-PROBLEMS: updated the list of known problems.

2000-10-04  Mark Galassi  <rosalia@lanl.gov>

	* NEWS, configure.in, gsl.spec: upped the version to 0.7 as we are
	about to release.

Thu Jul 20 20:20:04 2000  Brian Gough  <bjg@network-theory.co.uk>
