@@ -23,7 +23,7 @@ TESTS = test
 check_PROGRAMS = test
 
 test_SOURCES = test.c signals.c
-test_DEPENDENCIES = libgslfft.la
+
 test_LDADD = libgslfft.la ../ieee-utils/libgslieeeutils.la ../err/libgslerr.la ../test/libgsltest.la ../utils/libutils.la
 
 #errs_LDADD = libgslfft.la ../err/libgslerr.la ../test/libgsltest.la
