@@ -12,7 +12,6 @@ TESTS = test
 
 test_SOURCES = test.c
 test_LDADD = libgslfit.la ../ieee-utils/libgslieeeutils.la ../err/libgslerr.la ../test/libgsltest.la ../utils/libutils.la ../sys/libgslsys.la
-test_DEPENDENCIES = libgslfit.la
 
 #demo_SOURCES = demo.c
 #demo_LDADD = libgslfit.la ../ieee-utils/libgslieeeutils.la ../err/libgslerr.la ../test/libgsltest.la ../utils/libutils.la ../sys/libgslsys.la
