@@ -13,7 +13,6 @@ TESTS = test
 
 test_LDADD = libgslinterpolation.la ../linalg/libgsllinalg.la ../blas/libgslblas.la ../vector/libgslvector.la ../block/libgslblock.la ../err/libgslerr.la ../test/libgsltest.la ../utils/libutils.la
 
-test_DEPENDENCIES = libgslinterpolation.la
 test_SOURCES = test.c
 
 libgslinterpolation_la_SOURCES = accel.c akima.c bsearch.c cspline.c interp.c linear.c integ_eval_macro.h
