@@ -14,5 +14,4 @@ TESTS = test
 
 test_SOURCES = test.c test_funcs.c test_funcs.h
 test_LDADD = libgslmultimin.la ../min/libgslmin.la ../blas/libgslblas.la ../cblas/libgslcblas.la ../linalg/libgsllinalg.la ../matrix/libgslmatrix.la ../vector/libgslvector.la ../block/libgslblock.la ../ieee-utils/libgslieeeutils.la ../err/libgslerr.la ../test/libgsltest.la ../sys/libgslsys.la ../utils/libutils.la
-test_DEPENDENCIES = libgslmultimin.la
 
