@@ -16,4 +16,4 @@ TESTS = test
 
 test_SOURCES = test.c test_funcs.c test_funcs.h
 test_LDADD = libgslmultiroots.la ../linalg/libgsllinalg.la ../blas/libgslblas.la ../cblas/libgslcblas.la ../permutation/libgslpermutation.la ../matrix/libgslmatrix.la ../vector/libgslvector.la ../block/libgslblock.la ../ieee-utils/libgslieeeutils.la ../sys/libgslsys.la ../err/libgslerr.la ../test/libgsltest.la ../utils/libutils.la
-test_DEPENDENCIES = libgslmultiroots.la
+
