@@ -13,6 +13,6 @@ check_PROGRAMS = test
 TESTS = test
 
 test_LDADD = libgslodeiv.la ../ieee-utils/libgslieeeutils.la ../sys/libgslsys.la ../err/libgslerr.la ../test/libgsltest.la ../linalg/libgsllinalg.la ../blas/libgslblas.la ../cblas/libgslcblas.la ../matrix/libgslmatrix.la ../permutation/libgslpermutation.la ../vector/libgslvector.la ../block/libgslblock.la ../utils/libutils.la
-test_DEPENDENCIES = libgslodeiv.la
+
 test_SOURCES = test_odeiv.c
 
