@@ -18,4 +18,4 @@ TESTS = test
 
 test_SOURCES = test.c test_funcs.c test.h
 test_LDADD = libgslroots.la ../ieee-utils/libgslieeeutils.la ../sys/libgslsys.la ../err/libgslerr.la ../test/libgsltest.la ../utils/libutils.la
-test_DEPENDENCIES = libgslroots.la
+
